--- a/app/src/main/res/layout/fragment_adicionar_receita2.xml
+++ b/app/src/main/res/layout/fragment_adicionar_receita2.xml
@@ -48,7 +48,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="4dp"
             android:layout_marginTop="8dp">
@@ -56,7 +56,7 @@
             <EditText
                 android:id="@+id/editText_ingrediente_original"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="8dp"
@@ -73,16 +73,17 @@
             <EditText
                 android:id="@+id/editText_quantidade_original"
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_alignBaseline="@+id/editText_ingrediente_original"
                 android:layout_alignBottom="@+id/editText_ingrediente_original"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@+id/editText_ingrediente_original"
                 android:layout_toRightOf="@+id/editText_ingrediente_original"
+                android:digits="0123456789/_. "
                 android:ems="10"
                 android:hint="qtde"
-                android:inputType="number"
+                android:inputType="date"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/editText_ingrediente_original"
                 app:layout_constraintRight_toLeftOf="@+id/spinner_unidade_original"
