--- a/app/src/main/res/layout/content_estoque.xml
+++ b/app/src/main/res/layout/content_estoque.xml
@@ -10,7 +10,8 @@
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     >
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/fragment_container_estoque"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -25,7 +26,9 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="32dp" />
-        </LinearLayout>
+
+
+        </RelativeLayout>
 
         <FrameLayout
             android:id="@+id/frame_layout"
@@ -85,7 +88,7 @@
                     fab:fab_colorNormal="@color/accent"
                     fab:fab_colorPressed="@color/accent_dark"
                     fab:fab_plusIconColor="@color/white"
-                    fab:fab_icon="@drawable/googleg_color"
+                    fab:fab_icon="@drawable/google_logo"
                     fab:fab_size="mini"
                     fab:fab_title="Others" />
 
