--- a/app/src/main/res/layout/leitor_barras_popup_seleciona.xml
+++ b/app/src/main/res/layout/leitor_barras_popup_seleciona.xml
@@ -7,6 +7,15 @@
     android:background="@color/white"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_weight="0.01"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme" />
+
     <EditText
         android:id="@+id/barras_editText_encontrado"
         android:layout_width="match_parent"
