Atividade para ver receitas recomendadas

--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/nav_item_main"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="EasyFeed Home"/>
+    <item android:id="@+id/nav_item_recomenda"
+        android:icon="@drawable/ic_whatshot_black_24dp"
+        android:title="Recomendações"/>
     <item android:id="@+id/nav_item_busca"
         android:icon="@android:drawable/ic_menu_search"
         android:title="Busca" />
