--- a/app/src/main/res/layout/item_instingrediente.xml
+++ b/app/src/main/res/layout/item_instingrediente.xml
@@ -4,34 +4,44 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="5"
+
+
+    android:layout_marginTop="1dp"
+    android:layout_marginBottom="1dp"
+
     app:cardCornerRadius="1dp"
-    app:cardElevation="3dp">
+    app:cardElevation="1dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
         android:clickable="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
 
         <EditText
             android:id="@+id/item_instingrediente_nome"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_weight="5"
+            android:layout_weight="999"
             android:background="@null"
-            android:focusable="false"
-            android:contextClickable="true"
             android:clickable="true"
+            android:contextClickable="true"
+            android:focusable="false"
             android:singleLine="true"
             android:text="nome"></EditText>
 
         <EditText
             android:id="@+id/item_instingrediente_qtde"
-            android:layout_width="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginLeft="5dip"
@@ -46,7 +56,9 @@
 
         <EditText
             android:id="@+id/item_instingrediente_medida"
-            android:layout_width="30dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:layout_marginEnd="0dp"
@@ -58,5 +70,20 @@
             android:singleLine="true"
             android:text="medida"
             android:textColor="@color/blue_grey_800"></EditText>
+
+        <ImageView
+            android:id="@+id/remove_button"
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:paddingBottom="3dp"
+            android:paddingTop="3dp"
+            android:text="X"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            app:srcCompat="@drawable/ic_delete_forever_black_24dp" />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
