--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -31,6 +31,20 @@
             android:layout_height="match_parent"
             android:layout_weight="2.13" />
 
+        <include
+            android:id="@+id/passo_include_timer"
+            layout="@layout/content_passo_countdown"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
